overflow fixed on content page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,10 +49,14 @@
     </div>
               
           <!-- Page content -->
-          <div id="page-content-wrapper" style="overflow: auto;max-height: 100vh;"  >
+          <div id="page-content-wrapper p-5" style="overflow-y: auto;overflow-x: hidden; max-height: 100vh;"  >
             <!-- Keep all page content within the page-content inset div! -->
             <router-outlet ></router-outlet>
             
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
             </div>
           
