--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -109,7 +109,25 @@
         </div>
       </section>
     
-
+      <section class="page-section bg-dark" >
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <h2 class="section-heading text-uppercase text-light">Contact Us!</h2>
+              <h3 class="section-subheading text-muted"></h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12 col-lg-2"></div>
+            
+            <div class="col-sm-12 col-lg-8">
+              <app-contact-us></app-contact-us>
+            </div>
+    
+            <div class="col-sm-12 col-lg-2"></div>
+          </div>
+        </div>
+      </section>
       
 <div class="footer">
         <div class="container">
