--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -137,9 +137,9 @@
                 <div class="card-body small  border-light">
                     <div>
                         <button type="button" class="btn btn-link btn-sm text-info" (click)="launchApp(p)" >{{p.name}}</button> 
-                        <button type="button" class="btn btn-link btn-sm float-right content text-danger " (click)="removeBookmark(p)" title="Remove bookmark" >
+                        <!-- <button type="button" class="btn btn-link btn-sm float-right content text-danger " (click)="removeBookmark(p)" title="Remove bookmark" >
                             <fa-icon [icon]="removeFavIcon" ></fa-icon>
-                        </button> 
+                        </button>  -->
                     </div>
                     <hr>
 
