--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -143,7 +143,10 @@
                 <a href="https://www.facebook.com/encryptedbox" target="_blank" class="px-5 manita" >
                   <img src="assets/facebook.png" alt="">
                 </a>
-                <a href="https://github.com/betosmith2000/encryptedbox" target="_blank" class="manita" >
+                <a href="https://www.instagram.com/encryptedbox" target="_blank" class="manita" >
+                  <img src="assets/instagram.png" alt="">
+                </a>
+                <a href="https://github.com/betosmith2000/encryptedbox" target="_blank" class="p-5 manita" >
                   <img src="assets/github.png" alt="">
                 </a>
               <br>
