--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -108,7 +108,7 @@
         </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary" [disabled]="!fileForm.valid" >Save</button>
+                    <button type="button" class="btn btn-primary" [disabled]="!fileForm.valid" (click)="saveNote()" >Save</button>
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
         </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary" [disabled]="!folderForm.valid" >Save</button>
+                    <button type="button" class="btn btn-primary" [disabled]="!folderForm.valid" (click)="saveFolder()" >Save</button>
                 </div>
             </div>
         </div>
