--- a/src/app/passwords/passwords.component.html
+++ b/src/app/passwords/passwords.component.html
@@ -171,7 +171,7 @@
         </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary" [disabled]="!fileForm.valid" >Save</button>
+                    <button type="button" class="btn btn-primary" [disabled]="!fileForm.valid"(click)="savePassword()" >Save</button>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
         </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary" [disabled]="!folderForm.valid" >Save</button>
+                    <button type="button" class="btn btn-primary" [disabled]="!folderForm.valid" (click)="saveFolder()" >Save</button>
                 </div>
             </div>
         </div>
