--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
         <ul class="sidebar-nav font-weight-light" id="sidebar" >
             <li>
                 <a [routerLinkActive]="['active']" [routerLink]="['/all']">
-                    <fa-icon [icon]="allIcon" ></fa-icon>&nbsp;&nbsp;&nbsp;All  <fa-icon [icon]="allIcon" class="float-right mr-3"  *ngIf="!isOpenSideBar" [border]="true" ></fa-icon>
+                    <fa-icon [icon]="allIcon" ></fa-icon>&nbsp;&nbsp;&nbsp;All  <fa-icon [icon]="allIcon" class="float-right mr-3"  *ngIf="!isOpenSideBar"  ></fa-icon>
                 </a>
                 
             </li>
@@ -57,6 +57,7 @@
           <div id="page-content-wrapper p-5" style="overflow-y: auto;overflow-x: hidden; max-height: 100vh;"  >
             <!-- Keep all page content within the page-content inset div! -->
             <router-outlet ></router-outlet>
+            <jaspero-confirmations [defaultSettings]="{overlayClickToClose: false, overlay: true, confirmText: 'Yes', declineText: 'No'}"></jaspero-confirmations>
             
         <br>
         <br>
