Generate strog passwords added!

--- a/src/app/passwords/passwords.component.html
+++ b/src/app/passwords/passwords.component.html
@@ -151,12 +151,55 @@
                 </div>
                 <div class="form-group">
                     <label for="txtPassword">Password:</label>
-                    <input autocomplete="false" type="password" class="form-control" id="txtPassword" placeholder="Enter password"  formControlName="filePassword"
-                        [ngClass]="{'is-invalid':(filePassword.touched || filePassword.dirty) && !filePassword.valid}" />
-                    <span class="invalid-feedback" *ngIf="filePassword.invalid && (filePassword.touched || filePassword.dirty) ">
-                        <span *ngIf="filePassword.errors.required">Password is required</span>
-                        <span *ngIf="filePassword.errors.maxlength">The maximum length is 128</span>
-                    </span>
+                    
+                    
+
+                    <div class="input-group input-group-sm">
+                        <input autocomplete="false" type="text" class="form-control" id="txtPassword" placeholder="Enter password"  formControlName="filePassword"
+                            [ngClass]="{'is-invalid':(filePassword.touched || filePassword.dirty) && !filePassword.valid}" />
+                        <div class="input-group-prepend">
+                            <button type="button" class="btn btn-link btn-sm input-group-text" (click)="getNewPassword()" title="Generate password">
+                                <fa-icon [icon]="generateIcon" ></fa-icon>
+                            </button>
+                            <button type="button"  class="btn btn-link btn-sm input-group-text" (click)="showGenerateSettings()" title="Password Generation Settings">
+                                <fa-icon [icon]="settingsIcon" ></fa-icon>
+                            </button>
+                           
+                        </div>
+                       
+                        <span class="invalid-feedback" *ngIf="filePassword.invalid && (filePassword.touched || filePassword.dirty) ">
+                            <span *ngIf="filePassword.errors.required">Password is required</span>
+                            <span *ngIf="filePassword.errors.maxlength">The maximum length is 128</span>
+                        </span>
+                    </div>
+
+                </div>
+                <div id="divGenerateSettings" class="bg-light  border rounded shadow-sm p-2" >
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="cbAllowNumbers"  [(ngModel)]="allowNumbers" [ngModelOptions]="{standalone: true}">
+                        <label class="custom-control-label" for="cbAllowNumbers">Allow numbers</label>
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="cbAllowSymbols"  [(ngModel)]="allowSymbols" [ngModelOptions]="{standalone: true}">
+                        <label class="custom-control-label" for="cbAllowSymbols">Allow symbols</label>
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="cbAllowUpercase"  [(ngModel)]="allowUpercase" [ngModelOptions]="{standalone: true}">
+                        <label class="custom-control-label" for="cbAllowUpercase">Allow uppercase</label>
+                    </div>
+                    <div class="form-group row">
+                        <label for="inputPassword" class="col-sm-4 col-form-label small">Password length</label>
+                        <div class="col-sm-4">
+                          <input type="number" class="form-control" id="inputPassword" placeholder="Password length" [(ngModel)]="passwordLength" [ngModelOptions]="{standalone: true}">
+                        </div>
+                      </div>
+                      
+
+                    <div>
+                        <span class="form-text text-muted small">
+                            Set the desired values and click on the button again to generate the password
+                        </span>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="txtNotes">Notes:</label>
