--- a/src/app/passwords/passwords.component.scss
+++ b/src/app/passwords/passwords.component.scss
@@ -24,10 +24,13 @@
 }
 
 .content{
-    visibility: hidden;;
+    visibility: hidden;
 }
 
 .block-container:hover .content{
     visibility: visible;
 }
-
+img.folder-image{
+    opacity: .5;
+    filter: grayscale(60%);
+}
