--- a/src/app/passwords/passwords.component.html
+++ b/src/app/passwords/passwords.component.html
@@ -21,13 +21,15 @@
 </div>
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-4" *ngFor="let p of dataService?.currentFolder?.folders" >
-        <div class="card  shadow  m-2 manita block-container" (click)="folderEnter(p)">
-            <div class="text-center text-warning" style="margin-top: 50px;">
-                <fa-icon [icon]="folderIcon" size="10x" ></fa-icon>
-            </div>
-            <div class="card-img-overlay" >
-                <h5 class="card-title font-weight-lighter">{{p.folderName}}</h5>
-                <p class="card-text content small font-italic">{{p.folderNotes}}</p>
+        <div class="card border border-info bg-secondary shadow  m-2 manita block-container " (click)="folderEnter(p)">
+            <img src="../../assets/MainPageSmall.png" class="card-img-top  folder-image" alt="Folder">
+            <!-- <div class="text-center text-warning" style="margin-top: 50px;">
+                
+                <img src="" alt="Folder" class="folder-image" >
+            </div>-->
+            <div class="card-img-overlay" > 
+                <h5 class="card-title font-weight-boold text-white">{{p.folderName}}</h5>
+                <p class="card-text  content small font-italic text-white">{{p.folderNotes}}</p>
                 <div style="position: absolute; justify-content: flex-end; margin-bottom: 5px; " class="btn-toolbar small content  fixed-bottom" role="toolbar" aria-label="Toolbar">
                     <div class="btn-group btn-group-sm mr-2" role="group" aria-label="Toolbar">
                      
@@ -40,6 +42,7 @@
                     </div>
                 </div>
               </div>
+
            
         </div>
     </div>
